--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+beautifulsoup4==4.11.1
 certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_83242e7e-f82d-4a71-8ef2-9d71d212d249gu_wxmeq/croots/recipe/certifi_1655968827803/work/certifi
+charset-normalizer==2.1.1
 click==8.1.3
+cramjam==2.5.0
+fastparquet==0.8.3
 Flask==2.2.2
+fsspec==2022.8.2
 greenlet==1.1.3
+idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -9,13 +15,18 @@ MarkupSafe==2.1.1
 mysql-connector==2.2.9
 mysql-connector-python==8.0.30
 numpy==1.23.2
+packaging==21.3
 pandas==1.4.4
 Pillow==9.2.0
 protobuf==3.20.1
 PyMySQL==1.0.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.2.1
+requests==2.28.1
 six==1.16.0
+soupsieve==2.3.2.post1
 SQLAlchemy==1.4.41
+urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
