--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4==4.11.1
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_83242e7e-f82d-4a71-8ef2-9d71d212d249gu_wxmeq/croots/recipe/certifi_1655968827803/work/certifi
+certifi==2022.6.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 cramjam==2.5.0
@@ -11,12 +11,15 @@ idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1633637554808/work
+lightgbm @ file:///Users/runner/miniforge3/conda-bld/lightgbm_1641600026901/work
 MarkupSafe==2.1.1
 mysql-connector==2.2.9
 mysql-connector-python==8.0.30
 numpy==1.23.2
 packaging==21.3
 pandas==1.4.4
+pickle5==0.0.11
 Pillow==9.2.0
 protobuf==3.20.1
 PyMySQL==1.0.2
@@ -24,9 +27,13 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.2.1
 requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.1
 six==1.16.0
+sklearn==0.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.41
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
 urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.8.1
